--- a/Components/Pages/Menu.razor
+++ b/Components/Pages/Menu.razor
@@ -35,7 +35,7 @@
 
     void MostrarRelatorios()
     {
-        Mensagem = "📄 Página de Relatórios em desenvolvimento.";
+        Navigation.NavigateTo("/relatorio-pacientes");
     }
 
     void MostrarPerfil()
